# Dora-AI-Assistant

./: .gitignore  README.md  ai_agent.py  main.py  pyproject.toml  requirements.txt  speech_to_text.py  stt2.py  text_to_speech.py  tools.py
